# dodo-datagen

./: .clang-format  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.es.md  README.md
.github/workflows/: ci.yml  release.yml
examples/: events.json  products.json  transactions.json  users.json
include/dodo/: cli.hpp  field.hpp  generators.hpp  i18n.hpp  locale.hpp  rng.hpp  schema.hpp  writer.hpp
src/: cli.cpp  generators.cpp  i18n.cpp  locale.cpp  main.cpp  schema.cpp
src/data/: de_de.cpp  en_gb.cpp  en_us.cpp  es_es.cpp  fr_fr.cpp  locales.hpp
src/writers/: csv_writer.cpp  json_writer.cpp  sql_writer.cpp  writers.hpp
tests/: test_generators.cpp  test_golden.cpp  test_rng.cpp  test_schema.cpp  test_writers.cpp
